--- a/yueting/src/main/res/yueting/read/layout/read_include_top.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_include_top.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_top_read"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="@dimen/dimenButtonH"
     android:layout_gravity="top"
-    android:background="#ff3a454d"
+    android:background="@color/colorTitleBarGrey"
     android:visibility="invisible"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
