--- a/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
@@ -3,18 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
     tools:context="com.aqrlei.graduation.yueting.ui.FileActivity">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="60px"
-        android:background="#ffffffff" />
+        android:layout_height="@dimen/dimenViewHeight"
+        android:background="@color/colorWhite" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#ffffffff">
+        android:layout_height="@dimen/dimenTitleHeight"
+        android:background="@color/colorWhite">
 
         <ImageView
             android:id="@+id/backIv"
@@ -30,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right|center_vertical"
-            android:src="@drawable/common_selector_add"
-            android:onClick="onClick" />
+            android:onClick="onClick"
+            android:src="@drawable/common_selector_add" />
     </FrameLayout>
 
     <View style="@style/DividerStyle" />
@@ -39,13 +40,12 @@
     <TextView
         android:id="@+id/tv_file_parent"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="#ffffffee"
+        android:layout_height="@dimen/dimenFileParent"
+        android:background="@color/colorFileParentWhite"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:onClick="onClick"
-        android:textSize="12dp"
+        android:textSize="@dimen/dimenSmallNameTextSize"
         tools:text="/dev" />
 
     <View style="@style/DividerStyle" />
@@ -55,8 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        android:scrollbars="none"
-        />
+        android:scrollbars="none" />
 
 
 </LinearLayout>
