--- a/yueting/src/main/res/yueting/common/layout/main_include_yue_ting_top.xml
+++ b/yueting/src/main/res/yueting/common/layout/main_include_yue_ting_top.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingTop="60px">
+    android:paddingTop="@dimen/dimenViewHeight">
+
     <ImageView
         android:id="@+id/addFileIv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:onClick="onClick"
-        android:padding="12dp"
         android:background="@drawable/common_selector_add"
+        android:padding="@dimen/dimenIvYueTingTopPadding"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
