--- a/yueting/src/main/res/yueting/common/layout/manage_dialog_bottom.xml
+++ b/yueting/src/main/res/yueting/common/layout/manage_dialog_bottom.xml
@@ -2,8 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="@dimen/dimenExtraView"
     app:layout_constraintBottom_toBottomOf="parent"
+    android:background="@color/colorPageGreen"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent">
 
@@ -11,10 +12,9 @@
         android:id="@+id/tv_remove_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPageGreen"
         android:gravity="center"
         android:text="删除"
-        android:textSize="20sp"
+        android:textSize="@dimen/dimenDialogBottomTextSize"
         android:textStyle="bold" />
 
 </android.support.constraint.ConstraintLayout>
