--- a/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
@@ -4,23 +4,23 @@
     xmlns:yueting="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
     tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="60px"
-        android:background="#ffffffff" />
+        android:layout_height="@dimen/dimenViewHeight"
+        android:background="@color/colorWhite" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FFFFFF">
+        android:layout_height="@dimen/dimenTitleHeight"
+        android:background="@color/colorWhite">
 
         <ImageView
             android:id="@+id/backIv"
-            style="@style/TitleBarImageViewStyle"
-            android:onClick="onClick" />
+            style="@style/TitleBarImageViewStyle" />
 
         <TextView
             style="@style/TitleBarTextViewStyle"
@@ -32,13 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#76a1d4"
+        android:background="@color/colorVisualizerView"
         yueting:offSetX="64"
         yueting:scaleStyle="center"
         yueting:scaleTime="3"
         yueting:useMultiColor="true"
 
-        yueting:vRadius="100dp" />
+        yueting:vRadius="@dimen/dimenVisualizerViewRadius" />
 
     <include layout="@layout/music_include_yue_ting_play" />
 
