--- a/yueting/src/main/res/yueting/common/layout/read_activity_catalog.xml
+++ b/yueting/src/main/res/yueting/common/layout/read_activity_catalog.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="60px" />
+        android:layout_height="@dimen/dimenViewHeight" />
 
     <RadioGroup
         android:id="@+id/rg_read_catalog"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/dimenButtonH"
         android:layout_gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -23,12 +24,12 @@
             android:background="@null"
             android:button="@null"
             android:checked="true"
-            android:drawablePadding="4dp"
+            android:drawablePadding="@dimen/dimenPadding"
             android:gravity="center"
-            android:paddingTop="5dp"
+            android:paddingTop="@dimen/dimenPadding"
             android:text="目录"
             android:textColor="@color/main_selector_tab_text"
-            android:textSize="15dp" />
+            android:textSize="@dimen/dimenNameTextSize" />
 
         <RadioButton
             android:id="@+id/rb_bookMark_title"
@@ -38,12 +39,12 @@
             android:background="@null"
             android:button="@null"
             android:checked="false"
-            android:drawablePadding="4dp"
+            android:drawablePadding="@dimen/dimenPadding"
             android:gravity="center"
-            android:paddingTop="5dp"
+            android:paddingTop="@dimen/dimenPadding"
             android:text="书签"
             android:textColor="@color/main_selector_tab_text"
-            android:textSize="15dp" />
+            android:textSize="@dimen/dimenNameTextSize" />
     </RadioGroup>
 
     <com.aqrairsigns.aqrleilib.ui.view.AlphaListView
