--- a/yueting/src/main/res/yueting/common/layout/read_activity_txt.xml
+++ b/yueting/src/main/res/yueting/common/layout/read_activity_txt.xml
@@ -3,6 +3,7 @@
     android:id="@+id/fl_read_txt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <include layout="@layout/read_include_top" />
