--- a/yueting/src/main/res/yueting/home/layout/main_include_home_top.xml
+++ b/yueting/src/main/res/yueting/home/layout/main_include_home_top.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/dimenBigViewHeight"
     android:background="@color/colorPageGreen">
 
     <include layout="@layout/main_include_yue_ting_top" />
@@ -18,26 +18,26 @@
 
     <TextView
         android:id="@+id/tv_left_read"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/dimenTopW"
+        android:layout_height="@dimen/dimenTopH"
         android:background="@drawable/oval_shape_usetime"
         android:gravity="center"
         android:text="悦"
         android:textColor="@color/colorPageWhite"
-        android:textSize="20dp"
+        android:textSize="@dimen/dimenBigTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_right_listen"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/dimenTopW"
+        android:layout_height="@dimen/dimenTopH"
         android:background="@drawable/oval_shape_usetime"
         android:gravity="center"
         android:text="听"
         android:textColor="@color/colorPageWhite"
-        android:textSize="20dp"
+        android:textSize="@dimen/dimenBigTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,13 +45,12 @@
     <TextView
         android:id="@+id/tv_title_name"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginRight="75dp"
-        android:background="#4aacb7"
+        android:layout_height="@dimen/dimenButtonH"
+        android:background="@color/colorTitleBarGrey"
         android:drawableRight="@drawable/common_level_list_title"
-        android:padding="5dp"
+        android:padding="@dimen/dimenPadding"
         android:text="悦读"
-        android:textSize="20dp"
+        android:textSize="@dimen/dimenBigTextSize"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 
