--- a/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
@@ -15,7 +15,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimenTitleHeight"
-        android:background="@color/colorWhite">
+        android:background="@color/colorTitleBarGrey">
 
         <ImageView
             android:id="@+id/backIv"
