--- a/yueting/src/main/res/yueting/common/layout/read_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/read_list_item.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ll_read_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dimenReadListItemH"
+    android:background="@drawable/common_ripple_item"
     android:orientation="vertical">
 
     <LinearLayout
