--- a/yueting/src/main/res/yueting/common/layout/music_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_list_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_music_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dimenListItem"
+    android:layout_height="wrap_content"
     android:background="@drawable/common_ripple_item"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dimenListItem"
+        android:background="@drawable/common_ripple_item"
         android:orientation="horizontal">
         <FrameLayout
             android:layout_width="@dimen/dimenListItemFL"
