--- a/yueting/src/main/res/yueting/common/layout/read_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/read_list_item.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_read_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dimenReadListItemH"
-    android:background="@drawable/common_ripple_item"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dimenReadListItemH"
+        android:background="@drawable/common_ripple_item"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
